<resources>
    <string name="app_name">RealmApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dni">DNI</string>
    <string name="nom">NOM</string>
    <string name="cognom">COGNOM</string>
    <string name="edat">EDAT</string>
    <string name="genere">GENERE</string>
    <string name="afegir">AFEGIR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="genere_tv">GENERE:</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="edat_tx">EDAT:</string>
    <string name="buscar">BUSCAR</string>
    <string name="desde">DESDE</string>
    <string name="fins_a">FINS A</string>
    <string name="email">EMAIL</string>
</resources>
