<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_filtrar_persona"
    tools:context="com.example.realm1.FilterPerson">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genere_tv"

            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/radioFindPerson"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rdbOne">

            <RadioButton
                android:id="@+id/radioButtonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButtonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f" />

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edat_tx"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ageFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/desde"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/ageTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fins_a"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"/>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>